--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HTML5 Pacman</title>
+    <title>Pac-Man v prolížeči na infoek.cz</title>
     
     <style type="text/css">
       @font-face {
@@ -32,7 +32,7 @@
   
   <div id="shim">shim for font face</div>
 
-  <h1>HTML5 Pacman</h1>
+  <h1>PacMan ;)</h1>
 
   <div id="pacman"></div>
   <script src="pacman.js"></script>
@@ -52,4 +52,5 @@
   </script>
 
 </body>
+<script defer src="https://analytics.oscloud.cz/script.js" data-website-id="580f0fe8-fcba-41fe-82fa-20c363d11e99"></script>
 </html>
