--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Pac-Man v prolížeči na infoek.cz</title>
+    <title>Pac-Man v prohlížeči na infoek.cz</title>
     
     <style type="text/css">
       @font-face {
